--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "socket.io": "^4.5.1",
     "socket.io-client": "^4.5.1",
     "tailwindcss": "^3.1.3",
+    "uuid": "^8.3.2",
     "vite-svg-loader": "^3.4.0",
     "vue": "^3.2.25"
   },
