--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -1,8 +1,9 @@
 {
   "compilerOptions": {
     "composite": true,
-    "module": "esnext",
-    "moduleResolution": "node"
+    "module": "commonjs",
+    "moduleResolution": "node",
+    "outDir": "src/modules",
   },
   "include": ["vite.config.ts"]
 }
